--- a/pkgs/mcp/package.json
+++ b/pkgs/mcp/package.json
@@ -1,19 +1,32 @@
 {
   "name": "mcp",
-  "version": "0.1.0",
-  "description": "Model Context Protocol implementation",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "private": true,
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": ["mcp", "model-context-protocol"],
   "type": "module",
+  "scripts": {
+    "dev": "tsx index.ts",
+    "format": "prettier -c .prettierrc --write \"**/*.{ts,js,cjs,json,md}\"",
+    "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\"",
+    "lint": "eslint . --ext .ts --fix",
+    "lint:check": "eslint . --ext .ts"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.9.0",
+    "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
+    "viem": "^2.26.2",
+    "x402-axios": "latest",
+    "zod": "^3.24.2"
+  },
   "devDependencies": {
-    "@types/node": "^22.15.18",
-    "axios": "^1.9.0"
+    "@eslint/js": "^9.24.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "eslint": "^9.24.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "3.5.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
   }
 }
