--- a/pkgs/frontend/package.json
+++ b/pkgs/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.16",
     "@mastra/core": "^0.8.3",
     "@radix-ui/react-slot": "^1.2.0",
