Add file upload and download APIs, update configuration and dependencies

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,20 @@
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
-    "indentWidth": 2
+    "indentWidth": 2,
+    "ignore": [
+      "**/node_modules/**",
+      "**/dist/**",
+      "**/build/**",
+      "**/.next/**",
+      "**/out/**",
+      "**/coverage/**",
+      "**/.git/**",
+      "**/.github/**",
+      "**/.vscode/**",
+      "**/.idea/**",
+      "**/.DS_Store"
+    ]
   },
   "javascript": {
     "formatter": {
