--- a/pkgs/backend/package.json
+++ b/pkgs/backend/package.json
@@ -9,6 +9,7 @@
     "@hono/node-server": "^1.13.8",
     "dotenv": "^16.4.7",
     "hono": "^4.7.1",
+    "node-fetch": "^3.3.2",
     "x402-hono": "latest"
   },
   "devDependencies": {
