--- a/pkgs/backend/package.json
+++ b/pkgs/backend/package.json
@@ -10,18 +10,19 @@
     "dotenv": "^16.4.7",
     "hono": "^4.7.1",
     "node-fetch": "^3.3.2",
+    "x402": "^0.3.5",
     "x402-hono": "latest"
   },
   "devDependencies": {
-    "tsup": "^7.2.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.0",
     "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0",
-    "eslint-plugin-jsdoc": "^50.6.9",
-    "eslint-plugin-prettier": "^5.2.6",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "@typescript-eslint/parser": "^8.29.1",
-    "eslint-plugin-import": "^2.31.0"
+    "eslint": "^9.24.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-prettier": "^5.2.6",
+    "tsup": "^7.2.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
   }
 }
