--- a/pkgs/mcp/package.json
+++ b/pkgs/mcp/package.json
@@ -15,6 +15,7 @@
     "@modelcontextprotocol/sdk": "^1.9.0",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "ts-node": "^10.9.2",
     "viem": "^2.26.2",
     "x402-axios": "latest",
     "zod": "^3.24.2"
@@ -27,9 +28,9 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsdoc": "^50.6.9",
     "eslint-plugin-prettier": "^5.2.6",
+    "node-fetch": "^3.3.2",
     "prettier": "3.5.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.0",
-    "node-fetch": "^3.3.2"
+    "typescript": "^5.3.0"
   }
 }
