--- a/pkgs/mcp/tsconfig.json
+++ b/pkgs/mcp/tsconfig.json
@@ -7,6 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "strict": true,
+    "noImplicitAny": false,
     "resolveJsonModule": true,
     "baseUrl": ".",
     "outDir": "./dist",
