--- a/pkgs/frontend/package.json
+++ b/pkgs/frontend/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3001",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.16",
     "@mastra/core": "^0.8.3",
+    "@mastra/mcp": "^0.5.0",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
