--- a/pkgs/frontend/package.json
+++ b/pkgs/frontend/package.json
@@ -13,7 +13,10 @@
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.16",
     "@mastra/core": "^0.8.3",
+    "@mastra/fastembed": "^0.0.3",
+    "@mastra/libsql": "^0.0.4",
     "@mastra/mcp": "^0.5.0",
+    "@mastra/memory": "^0.3.4",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
