--- a/pkgs/mcp/tsconfig.json
+++ b/pkgs/mcp/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
+    "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -11,9 +11,9 @@
     "noImplicitAny": false,
     "resolveJsonModule": true,
     "baseUrl": ".",
+    "rootDir": "./src",
     "outDir": "./dist",
-    "declaration": true,
-    "types": ["node"]
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"]
